--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     />
     <meta
       property="og:image"
-      content="https://mehmetkahya0.github.io/temp-mail/images/temp-mail-og-image.png"
+      content="https://jphabs.github.io/tempmail/images/temp-mail-og-image.png"
     />
     <meta
       property="og:url"
-      content="https://mehmetkahya0.github.io/temp-mail/"
+      content="https://jphabs.github.io/tempmail/"
     />
     <meta property="og:type" content="website" />
     <!-- Open Graph Meta Etiketleri Sonu -->
-    <link rel="canonical" href="https://mehmetkahya0.github.io/temp-mail/" />
+    <link rel="canonical" href="https://jphabs.github.io/tempmail/" />
     <meta name="robots" content="index, follow" />
 
     <!-- Diğer Meta ve Bağlantılar -->
