--- a/privacy/privacy.html
+++ b/privacy/privacy.html
@@ -29,7 +29,7 @@
         <main>
             <section class="privacy-policy">
                 <h1>Privacy Policy</h1>
-                <p>Last updated: 15 January 2025</p>
+                <p>Last updated: 19 February 2025</p>
 
                 <h2>1. Introduction</h2>
                 <p>Welcome to TempMail ("we," "our," "us"). Your privacy is critically important to us. This Privacy Policy explains how we handle your information when you use our platform.</p>
@@ -60,7 +60,7 @@
 
 
                 <h2>10. Contact Us</h2>
-                <p>If you have any questions or concerns about this Privacy Policy, please feel free to contact us at <a href="mailto:mehmetkahyakas5@gmail.com">mehmetkahyakas5@gmail.com</a>.</p>
+                <p>If you have any questions or concerns about this Privacy Policy, please feel free to contact us at <a href="mailto:jphabswebsites@gmail.com">Jphabs Khalifa</a>.</p>
             </section>
         </main>
 
@@ -73,7 +73,7 @@
 
         <!-- Update Notification Pop-up -->
         <div id="update-notification" class="update-notification">
-            <span>Temp Mail V2 is out! You can check new features!</span>
+            <span>Temp Mail! You can check new features!</span>
             <button id="close-notification" class="close-notification">&times;</button>
         </div>
     </div>
